fix supervisorctl socket path

--- a/config/supervisor/supervisord.conf
+++ b/config/supervisor/supervisord.conf
@@ -33,10 +33,10 @@ logfile_backups=10
 supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 
 [supervisorctl]
-serverurl=unix:///var/run/supervisor.sock ; use a unix:// URL  for a unix socket
+serverurl=unix:///var/run/supervisor/supervisor.sock ; use a unix:// URL  for a unix socket
 username={USERNAME}
 password={PASSWORD}
-prompt="supervisord ({USERNAME})\n# "
+prompt="{USERNAME}# "
 
 ; The [include] section can just contain the "files" setting.  This
 ; setting can list multiple files (separated by whitespace or
